--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/styles.css" />
     <script defer src="./script/script.js"></script>
-    <title>Document</title>
+    <title>Warehouse</title>
   </head>
   <body>
-    
+    <h1 id="title">Warehouse Items: 0</h1>
+    <form id="item-form">
+      <div>
+        <label>Item Name:</label>
+        <input type="text" id="name" required minlength="2" />
+      </div>
+
+      <div>
+        <label>Quantity:</label>
+        <input type="number" id="quantity" required min="1" />
+      </div>
+
+      <div>
+        <label>Location:</label>
+        <input type="text" id="Location" />
+      </div>
+
+      <button type="submit">Add Item</button>
+      <button type="button" id="clear">Clear</button>
+
+    </form>
+
+    <div id="inventory"></div>
   </body>
 </html>
