--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
 
       <button type="submit">Add Item</button>
       <button type="button" id="clear">Clear</button>
-
     </form>
 
     <div id="inventory"></div>
+
+    <template id="item-template">
+      <div class="item">
+        <span class="item-name"></span> - <span class="item-qty"></span> pcs at
+        <span class="item-loc"></span>
+        <button class="edit"></button>
+        <button class="delete"></button>
+      </div>
+    </template>
   </body>
 </html>
