fixed typo in html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label>Location:</label>
         <input
           type="text"
-          id="Location"
+          id="location"
           pattern="[A-Z][0-9]{2}-[0-9]{2}"
           placeholder="e.g. A01-01"
         />
