--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     <form id="item-form">
       <div>
         <label>Item Name:</label>
-        <input type="text" id="name" required minlength="2" />
+        <input
+          type="text"
+          id="name"
+          required
+          minlength="2"
+          placeholder="At least two characters long"
+        />
         <div class="error" id="name-error">
           Name must be at least 2 characters
         </div>
@@ -20,7 +26,13 @@
 
       <div>
         <label>Quantity:</label>
-        <input type="number" id="quantity" required min="1" />
+        <input
+          type="number"
+          id="quantity"
+          required
+          min="1"
+          placeholder="Min 1"
+        />
       </div>
 
       <div>
@@ -34,8 +46,10 @@
         <div class="error" id="location-error">Format must be A01-01</div>
       </div>
 
-      <button type="submit">Add Item</button>
-      <button type="button" id="clear">Clear</button>
+      <div id="buttons-div">
+        <button type="submit" id="submit">Add Item</button>
+        <button type="button" id="clear">Clear</button>
+      </div>
     </form>
 
     <div id="inventory"></div>
